feat(roadmap): add missing getStatus impl. fix code generation issues
